# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-21 22:02:45 GMT	John Goerzen <jgoerzen@complete.org>	patch-136

    Summary:
      Added rename features
    Revision:
      missingh--head--0.7--patch-136


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-21 21:13:57 GMT	John Goerzen <jgoerzen@complete.org>	patch-135

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-135


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-21 20:53:36 GMT	John Goerzen <jgoerzen@complete.org>	patch-134

    Summary:
      Expanded notion of state
    Revision:
      missingh--head--0.7--patch-134


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-21 20:42:42 GMT	John Goerzen <jgoerzen@complete.org>	patch-133

    Summary:
      Now traps errors
    Revision:
      missingh--head--0.7--patch-133


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-21 20:01:55 GMT	John Goerzen <jgoerzen@complete.org>	patch-132

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-132


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-21 19:38:00 GMT	John Goerzen <jgoerzen@complete.org>	patch-131

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-131


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-21 19:17:58 GMT	John Goerzen <jgoerzen@complete.org>	patch-130

    Summary:
      It compiles
    Revision:
      missingh--head--0.7--patch-130


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-21 19:05:43 GMT	John Goerzen <jgoerzen@complete.org>	patch-129

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-129


    modified files: